deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syndicateclaw
spec:
  selector:
    app.kubernetes.io/name: syndicateclaw
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
